# Generadores-de-n-meros-pseudoaleatorios

./: README.md  main.py  pyproject.toml
app_services/: exportacion_service.py  generacion_service.py  graficos_service.py  semillas_service.py  validacion_service.py
distribuciones/: __init__.py  normal.py  uniforme.py
generador_npseudoaleatorios/: api.py
generador_npseudoaleatorios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
generador_numeros/: congruencia_lineal.py  congruencial_aditivo.py  congruencial_multiplicativo.py  cuadrados_medios.py
validacion_numeros/: aleatoriedad.py  no_correlacion_serial.py  prueba_kolmogorov_smirnov.py  uniformidad.py
validadores/: prueba_chi_cuadrado.py  prueba_kolmogorov_smirnov.py  prueba_medias.py  prueba_poker.py  prueba_rachas.py  prueba_varianza.py
visualizaciones/: __init__.py  graficas_de_validacion.py  histogramaD_Normal.py  histogramaD_Uniforme.py  histograma_Congruencia_Lineal.py  histograma_Congruencial_Aditivo.py  histograma_Congruencial_Multiplicativo.py  histograma_Cuadrados_Medios.py  histogramas_unificados.py
